remove padding and responsive bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -220,6 +220,10 @@ nav {
     right: -5px;
 }
 
+.foodHighlightList {
+    padding: 0;
+}
+
 .foodHighlightListItem {
     list-style: none;
     margin: 20px 0;
